--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "QuantumSheep",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@types/node": "^10.1.1"
   }
 }
