Now using a proxy to use the same port (for example) + Beautify the example

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "QuantumSheep",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "http-proxy": "^1.17.0"
+  },
   "devDependencies": {
     "@types/node": "^10.1.1"
   }
